# Stock-Analysis-PSX

./: pyproject.toml  requirements.txt
app/: main.py
app/agents/: research_agent.py
app/agents/prompts/: system_prompts.py
app/agents/tools/: scraping_tool.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: analysis.py
app/api/v1/schemas/: analysis.py
app/core/: config.py
app/prompts/: system_prompts.py
app/services/: analysis_service.py  scraping_service.py
app/ui/: app.py
app/workflows/: analysis_workflow.py
scraped_data/c03489a1-4481-4640-baaa-2c2d1986431f/: BOP_psx.html  BOP_stockanalysis_balance_sheet.md  BOP_stockanalysis_cash_flow.md  BOP_stockanalysis_financials.md  BOP_stockanalysis_overview.md  BOP_stockanalysis_ratios.md  BOP_stockanalysis_statistics.md  MCB_psx.html  MCB_stockanalysis_balance_sheet.md  MCB_stockanalysis_cash_flow.md  MCB_stockanalysis_financials.md  MCB_stockanalysis_overview.md  MCB_stockanalysis_ratios.md  MCB_stockanalysis_statistics.md  MEBL_psx.html  MEBL_stockanalysis_balance_sheet.md  MEBL_stockanalysis_cash_flow.md  MEBL_stockanalysis_financials.md  MEBL_stockanalysis_overview.md  MEBL_stockanalysis_ratios.md  MEBL_stockanalysis_statistics.md  TRG_psx.html  TRG_stockanalysis_balance_sheet.md  TRG_stockanalysis_cash_flow.md  TRG_stockanalysis_financials.md  TRG_stockanalysis_overview.md  TRG_stockanalysis_ratios.md  TRG_stockanalysis_statistics.md
