[project]
name = "agent-fundaanal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.5",
    "fastapi>=0.116.2",
    "firecrawl-py>=4.3.6",
    "google-genai>=1.38.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
